# SimpleTuner-astria

./: .dockerignore  .gitignore  Dockerfile  build_compiled_model_forward.py  pyproject.toml
.github/workflows/: publish-docker.yml
astria/: BENCHMARK.md  add_clut.py  add_grain.py  astria_mock_server.py  astria_server.py  astria_utils.py  caption.py  cleanup_directory.py  controlnet_constants.py  download_training_v1.py  download_training_v2.py  esrgan_model.py  esrgan_model_arch.py  hinter_helper.py  image_utils.py  infer.py  init_download_models.py  inpaint_face_mixin.py  merge_loras.py  pipeline_flux_differential_img2img.py  rag_diffusion_test.py  read_safetensors_metadata.py  request_session.py  run_sweeps.sh  runpod_handler.py  runpod_test.sh  runpod_utils.py  set_runpod_mounts.sh  sig_listener.py  super_resolution_helper.py  train.py  train_test.bash  vton_mixin.py  watchdog.sh  watermark_helper.py
astria/birefnet/: BiRefNet_node.py  folder_paths.py
astria/pulid_pipeline/: face_cropping.py  inference.py  inference_multi.py  pipeline.py  pipeline_multi.py  pulid_ext.py  requirements.txt  transformer.py  transformer_multi.py
astria/pulid_pipeline/eva_clip/: factory.py
astria/ragdiffusion/: __init__.py  cross_attention.py  llm.py  matrix.py  pipeline.py  transformer.py
astria/ragdiffusion/editor/: package-lock.json  package.json  webpack.config.js
astria/ragdiffusion/prompts/: create_regional_image.py  prompt.txt  prompt_legacy.txt  prompt_only_sr.txt  test.txt  test_regional.json  (+5 more)
astria/sweeps/: batch_size_sweep.sh  caption_dropout_sweep.sh  lora_rank_sweep.sh  lr_sweep.sh  prompt_sweep.sh  resolution_sweep.sh  shift_sweep.sh  token_sweep.sh
astria_tests/: test_fill.py  test_infer.py  test_inpaint.py  test_inpaint_faces.py  test_rag.py  test_vton.py
astria_tests/fixtures/: db.json
helpers/caching/: text_embeds.py
helpers/configuration/: cmd_args.py
helpers/training/: adapter.py  evaluation.py  optimizer_param.py  trainer.py  validation.py
simpletuner_v0/: train.py
simpletuner_v0/helpers/: arguments.py  log_format.py
(+10 files in other folders)
